--- a/psychopy/experiment/components/settings/JS_htmlHeader.tmpl
+++ b/psychopy/experiment/components/settings/JS_htmlHeader.tmpl
@@ -3,21 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no">
-    <title>{name} [PsychoPy]</title>
+    <title>Study</title>
     <!-- styles -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery-ui-dist@1.12.1/jquery-ui.min.css">
     <link rel="stylesheet" href="./lib/psychojs-{version}.css">
+    <link rel="stylesheet" href="https://run.pavlovia.org/sijiazhao/lib/styles.css">
   </head>
   <body>
     <div id="root"></div>
     <!-- external libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery-ui-dist@1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/preloadjs@1.0.1/lib/preloadjs.min.js"></script>
     <!-- experiment -->
     <script src="./{name}.js" type="module"></script>
-    <!-- legacy browsers -->
-    <script src="./lib/psychojs-{version}.iife.js" nomodule></script>
-    <script src="./{name}-legacy-browsers.js" nomodule></script>
   </body>
 </html>
