--- a/psychopy/experiment/components/settings/JS_htmlHeader.tmpl
+++ b/psychopy/experiment/components/settings/JS_htmlHeader.tmpl
@@ -5,7 +5,7 @@
     <meta name="viewport" content="user-scalable=no">
     <title>Study</title>
     <!-- styles -->
-    <link rel="stylesheet" href="./lib/psychojs-{version}.css">
+    <link rel="stylesheet" href="https://run.pavlovia.org/sijiazhao/lib/psychojs-{version}.css">
     <link rel="stylesheet" href="https://run.pavlovia.org/sijiazhao/lib/styles.css">
   </head>
   <body>
