--- a/psychopy/experiment/components/settings/JS_setupExp.tmpl
+++ b/psychopy/experiment/components/settings/JS_setupExp.tmpl
@@ -4,7 +4,7 @@ async function updateInfo() {{
   currentLoop = psychoJS.experiment;  // right now there are no loops
   expInfo['date'] = util.MonotonicClock.getDateStr();  // add a simple timestamp
   expInfo['expName'] = expName;
-  expInfo['psychopyVersion'] = '{version}';
+  expInfo['psychopyVersion'] = '{version}-sijiazhao';
   expInfo['OS'] = window.navigator.platform;
 
 
@@ -19,7 +19,7 @@ async function updateInfo() {{
   util.addInfoFromUrl(expInfo);
   {setRedirectURL}
 
-  
+
   psychoJS.experiment.dataFileName = (("." + "/") + {filename});
   psychoJS.experiment.field_separator = {field_separator};
 
